portfolio/style.css
/* ... */
.portfolio .wrapper {
  padding-bottom: 0;
}

.portfolio__description {
  max-width: 360px;
  margin-bottom: 40px;
}

.portfolio__list::-webkit-scrollbar {
  width: 0;
}

.portfolio__list {
  width: auto;
  height: 654px;
  display: flex;
  column-gap: 20px;
  padding-inline: 20px;
  overflow-x: auto;
}

.portfolio__list-wrapper {
  position: relative;
}

.portfolio__item:first-of-type,
.portfolio__item:last-of-type {
  margin-inline: auto;
}

.portfolio__control {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 30%;
  left: 0;
}

.portfolio__control:last-of-type {
  left: auto;
  right: 0;
}

@media (hover: coarse) {
  .portfolio__control {
    display: none;
  }
}

.portfolio__item {
  max-width: 400px;
  flex-shrink: 0;
}

.portfolio__item.small {
  width: 220px;
  align-self: center;
}

.portfolio__item.small img {
  aspect-ratio: 1 / 1;
}

.portfolio__item.medium {
  width: 280px;
}

.portfolio__item.bottom {
  align-self: end;
}

.portfolio__item.small.center {
  align-self: center;
}

.portfolio__item.medium.center {
  margin-top: 120px;
}

/* =================== PRICE BLOCK =================== */

.price__description {
  margin-bottom: 40px;
}

.price__list {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(150px, 320px));
  gap: 20px;
  justify-content: center;
}

.price__item {
  flex: 1 1 320px;
}

.card {
  box-sizing: border-box;
  height: 500px;
  display: flex;
  flex-direction: column;
  padding: 24px;
  border: 1px solid var(--bg-color-main);
  transition: var(--transition-out);
}

@media (hover: hover) {
  .card:hover {
    border-color: var(--color-accent);
    transition: var(--transition-in);
  }
}

@media (hover: none) {
  .card:active {
    border-color: var(--color-accent);
  }
}

.card__title {
  margin-bottom: 12px;
  font-family: var(--second-family);
  font-weight: 400;
  font-size: 1.25rem;
  line-height: 1.4;
  text-transform: uppercase;
}

.card__list {
  margin-bottom: 8px;
}

.card__item {
  position: relative;
  padding-left: 12px;
  margin-bottom: 4px;
}

.card__item::before {
  content: "";
  position: absolute;
  left: 0;
  top: calc(50% - 3px);
  width: 6px;
  height: 6px;
  background-color: var(--bg-color-main);
}

.card__price {
  font-family: var(--second-family);
  text-transform: uppercase;
}

.card__add-info {
  font-style: italic;
  line-height: 1.25;
  margin-bottom: 12px;
  margin-top: auto;
}

.card__btn {
  box-sizing: border-box;
  width: 100%;
  line-height: 60px;
  color: var(--text-color-main);
  background-color: var(--bg-color-main);
  padding-inline: 20px;
  font-family: var(--second-family);
  text-transform: uppercase;
  transition: var(--transition-out);
}

@media (hover: hover) {
  .card:hover .card__btn {
    color: var(--text-color-add);
    background-color: var(--color-accent);
    transition: var(--transition-in);
  }
}

@media (hover: none) {
  .card:active .card__btn {
    color: var(--text-color-add);
    background-color: var(--color-accent);
  }
}

@media (min-width: 769px) {
  .price__list {
    gap: clamp(20px, 2.78vw, 40px);
  }
}

/* =================== FAQ BLOCK =================== */

.faq__text {
  margin-bottom: 40px;
}

.faq__item {
  border-bottom: 1px solid var(--bg-color-add);
}

.faq__question {
  padding: 18px 24px 17px 0;
  font-family: var(--second-family);
  font-weight: 400;
  font-size: 1.25rem;
  line-height: 1.4;
  text-transform: uppercase;
  background-color: var(--bg-color-main);
  background-image: url("./assets/images/decor/plus.svg");
  background-repeat: no-repeat;
  background-position: top 20px right;
  background-size: 24px 24px;
  transition: var(--transition-out);
  cursor: pointer;
}

@media (hover: hover) {
  .faq__question:hover {
    color: var(--color-accent);
    background-image: url("./assets/images/decor/plus-red.svg");
    transition: var(--transition-in);
  }
}

@media (hover: none) {
  .faq__question:active {
    color: var(--color-accent);
    background-image: url("./assets/images/decor/plus-red.svg");
  }
}

.faq__item.open .faq__question {
  background-image: url("./assets/images/decor/minus.svg");
}

@media (hover: hover) {
  .faq__item.open .faq__question:hover {
    background-image: url("./assets/images/decor/minus-red.svg");
  }
}

@media (hover: none) {
  .faq__item.open .faq__question:active {
    background-image: url("./assets/images/decor/minus-red.svg");
  }
}

.faq__answer {
  padding-bottom: 19px;
}

.faq__answer-wrapper {
  height: 0;
  overflow: hidden;
  transition: height 0.3s ease-in-out;
}

.faq__item.open .faq__answer-wrapper {
  height: auto;
  transition: height 0.3s ease-in-out;
}

@media (min-width: 950px) {
  .faq .wrapper {
    display: flex;
    justify-content: space-between;
    gap: 40px;
  }

  .faq-column {
    flex: 1;
  }
}

/* =================== FOOTER =================== */

.booking .wrapper {
  padding-top: 40px;
  padding-bottom: 20px;
}

.booking__title {
  margin-bottom: 20px;
  font-family: var(--second-family);
  font-weight: 400;
  font-size: 1.25rem;
  line-height: 1.4;
  text-transform: uppercase;
  text-align: center;
}

.booking__form {
  display: flex;
  width: 100%;
  align-items: stretch;
  gap: 8px;
  justify-content: center;
  flex-wrap: wrap;
}

.booking__input {
  height: 60px;
  box-sizing: border-box;
  border: 1px solid var(--bg-color-main);
  padding: 18px 12px;
  font-family: var(--second-family);
  text-transform: uppercase;
  line-height: 1.5;
  font-weight: 400;
  font-size: 1rem;
  width: 100%;
}

.booking__input:not(:disabled):hover {
  border-color: var(--color-accent);
}

.booking__input::placeholder {
  color: #989898;
  font-size: 1rem;
  line-height: 1.5;
}

.booking__btn {
  height: 60px;
  padding-inline: 67px;
  background-color: var(--bg-color-main);
  color: var(--text-color-main);
  font-family: var(--second-family);
  text-transform: uppercase;
  line-height: 1.5;
  font-weight: 400;
  width: 100%;
  transition: var(--transition-out);
}
/* ... */

